[package]
name = "tower-async-hyper"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.2.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/tower-async"
homepage = "https://github.com/plabayo/tower-async"
description = """
Bridges a `tower-async` `Service` to be used within a `hyper` (1.x) environment.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
tower-async-service = { version = "0.2", path = "../tower-async-service" }

[dev-dependencies]
http = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower-async = { path = "../tower-async", features = ["full"] }
tower-async-http = { path = "../tower-async-http", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]
