[package]
name = "tower-async-hyper"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/tower-async"
homepage = "https://github.com/plabayo/tower-async"
description = """
Bridges a `tower-async` `Service` to be used within a `hyper` (1.x) environment.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]
http-body = "1"
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
pin-project-lite = "0.2"
tower-async-service = { version = "0.2", path = "../tower-async-service" }

[dev-dependencies]
http = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower-async = { path = "../tower-async", features = ["full"] }
tower-async-http = { path = "../tower-async-http", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]
