[package]
name = "tower-async-layer"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/async-tower"
homepage = "https://github.com/plabayo/async-tower"
description = """
Decorates a `Service` to allow easy composition between `Service`s.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]

[dev-dependencies]
tower-async-service = { version = "0.1", path = "../tower-async-service" }
tower-async = { version = "0.1", path = "../tower-async" }
