[package]
name = "tower-async-layer"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.2.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/tower-async"
homepage = "https://github.com/plabayo/tower-async"
description = """
Decorates a `Service` to allow easy composition between `Service`s.
 An "Async Trait" fork from the original Tower Library.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]

[dev-dependencies]
tower-async = { path = "../tower-async", features = ["util"] }
tower-async-service = { path = "../tower-async-service" }
