[package]
name = "tower-async-service"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.3.2"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/async-tower"
homepage = "https://github.com/plabayo/async-tower"
description = """
Trait representing an asynchronous, request / response based, client or server.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]

[dev-dependencies]
http = "0.2"
tower-async-layer = { version = "0.1", path = "../tower-async-layer" }
tokio = { version = "1", features = ["macros", "time"] }
futures = "0.3"
