[package]
name = "tower-async-service"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/tower-async"
homepage = "https://github.com/plabayo/tower-async"
description = """
Trait representing an asynchronous, request / response based, client or server.
An "Async Trait" fork from the original Tower Library.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]

[dev-dependencies]
futures = "0.3"
http = "0.2"
tokio = { version = "1", features = ["macros", "time"] }
tower-async-layer = { path = "../tower-async-layer" }
