[package]
name = "tower-async-test"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/async-tower"
homepage = "https://github.com/plabayo/async-tower"
description = """
Utilities for writing client and server `Service` tests.
"""
categories = ["asynchronous", "network-programming"]
edition = "2021"

[dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["sync"] }
tokio-test = "0.4"
tower-async-layer = { version = "0.1", path = "../tower-async-layer" }
tower-async-service = { version = "0.1", path = "../tower-async-service" }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
