[package]
name = "tower-async"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "vX.X.X" git tag.
version = "0.1.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/tower-async"
homepage = "https://github.com/plabayo/tower-async"
description = """
Tower Async is a library of modular and reusable components for building robust
clients and servers. An "Async Trait" fork from the original Tower Library.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures", "service"]
edition = "2021"

[features]

# Internal
__common = ["futures-core"]

full = [
  "filter",
  "make",
  "retry",
  "timeout",
  "util",
]

filter = ["__common", "futures-util"]
make = ["futures-util", "tokio/io-std"]
retry = ["__common", "tokio/time", "util"]
timeout = ["tokio/time", "tokio/macros"]
util = ["__common", "futures-util"]

[dependencies]
tower-async-layer = { version = "0.1", path = "../tower-async-layer" }
tower-async-service = { version = "0.1", path = "../tower-async-service" }

futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
tokio = { version = "1.6", optional = true, features = ["sync"] }

[dev-dependencies]
tower-async-test = { version = "0.1", path = "../tower-async-test" }
futures = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1.6", features = ["macros", "sync", "test-util", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
http = "0.2"
quickcheck = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]
