[package]
name = "axum-key-value-store"
version = "0.1.0"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
hyper = { version = "0.14.15", features = ["full"] }
tokio = { version = "1.2.0", features = ["full"] }
tower-async = { path = "../../../tower-async", features = ["full"] }
tower-async-http = { path = "../../../tower-async-http", features = ["full"] }
tower-async-bridge = { path = "../../../tower-async-bridge" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
axum = "0.6"
clap = { version = "4.2", features = ["derive"] }
